--- a/src/component/mainPage/styles.css
+++ b/src/component/mainPage/styles.css
@@ -1,9 +1,11 @@
 .bg-custom{
-    background-image: url('https://img.freepik.com/premium-photo/stethoscope-red-background_834769-118.jpg?w=1060');
+    background-image: url('https://kajabi-storefronts-production.kajabi-cdn.com/kajabi-storefronts-production/themes/2149915785/settings_images/T9HcvGjFQYyAKNXeQvtG_file.jpg');
     background-repeat: no-repeat;
-    background-size: cover;
-    /* background-position: center; */
+    background-size: 100% 100%; /* Ensure the image covers the entire element */
+    background-position: center; /* Center the background image */
     position: relative;
     z-index: 1;
+    height: 100vh; /* Cover entire viewport height */
+    width: 100vw; /* Cover entire viewport width */
     /* opacity: 0.8; */
 }
